--- a/style.css
+++ b/style.css
@@ -1,29 +1,10 @@
-body {
-  background-color: rgb(241, 255, 242);
-}
 
-#container {
+#f1-timer-container {
   width: 570px;
   margin: 0 auto;
 }
 
-h1 {
-  font-size: 40px;
-  text-align: center;
-}
-
-h4 {
-  font-size: 18px;
-  width: 555px;
-}
-
-h1, h4 {
-  font-family: Arial, Helvetica, sans-serif;
-  color: rgb(54, 54, 54);
-  margin-left: 10px;
-}
-
-.light {
+.f1-timer-light {
   height: 200px;
   width: 100px;
   margin-left: 10px;
@@ -33,15 +14,15 @@ h1, h4 {
   border-radius: 10px;
 }
 
-.off {
+.f1-timer-off {
   background-color: grey;
 }
 
-.on {
+.f1-timer-on {
   background-color: red;
 }
 
-#start {
+#f1-timer-start {
   width: 555px;
   height: 200px;
   margin-left: 10px;
@@ -49,7 +30,7 @@ h1, h4 {
   background-color: lightgreen;
 }
 
-#display-time {
+#f1-timer-display-time {
   color: rgb(54, 54, 54);
   padding: 50px;
   text-align: center;
@@ -57,7 +38,7 @@ h1, h4 {
   touch-action: manipulation;
 }
 
-#reload {
+#f1-timer-reload {
   width: 555px;
   height: 50px;
   margin-left: 10px;
@@ -66,17 +47,17 @@ h1, h4 {
   cursor: pointer;
 }
 
-#reload p {
+#f1-timer-reload p {
   color: rgb(54, 54, 54);
   padding: 15px;
   text-align: center;
   font-size: 20px;
 }
 
-.invisible {
+.f1-timer-invisible {
   display: none;
 }
 
-.visible {
+.f1-timer-visible {
   display: block;
 }
